Translate devilish plan + campaign translation setup

--- a/campaigns/inferno_devilish_plan.tex
+++ b/campaigns/inferno_devilish_plan.tex
@@ -75,7 +75,8 @@ Take the following Map tiles and arrange them as shown in the scenario map layou
   \item 1 × Rampart (S4)
 \end{itemize}
 
-\vspace*{\fill}\columnbreak
+\vspace*{\fill}
+\columnbreak
 
 \textbf{3 × Far Map tile (II--III)}
 \begin{itemize}
