--- a/campaigns/main.tex
+++ b/campaigns/main.tex
@@ -2,12 +2,12 @@
 
 \clearpage
 
-\input{campaigns/inferno_devilish_plan.tex}
+\input{\campaignspath/inferno_devilish_plan.tex}
 
 \clearpage
 
-\input{campaigns/inferno_steadwicks_fall.tex}
+\input{\campaignspath/inferno_steadwicks_fall.tex}
 
 \clearpage
 
-\input{campaigns/inferno_deal_with_the_devil.tex}
+\input{\campaignspath/inferno_deal_with_the_devil.tex}
