Fix map tiles explanation for inferno campaigns

--- a/campaigns/inferno_deal_with_the_devil.tex
+++ b/campaigns/inferno_deal_with_the_devil.tex
@@ -77,21 +77,21 @@ cards are not played again immediately, but instead are played as soon as the ne
 
 Take the following Map tiles and set them up as shown in the scenario map layout:
 
-\textbf{3 × Starting Map tile (I)}
+\textbf{3 × Starting (I) Map tile}
 \begin{itemize}
   \item 1 × Inferno (S6)
   \item 1 × Castle (S3)
   \item 1 × Rampart (S4)
 \end{itemize}
 
-\textbf{7 × Far Map tile (II--III)}
+\textbf{7 × Far (II--III) Map tile}
 \begin{itemize}
   \item 3 × Inferno (F16, F17, F18)
   \item 3 × Castle (F3, \#F4, F6)
   \item 1 × Rampart (F12)
 \end{itemize}
 
-\textbf{1 × Near Map tile (IV--V)}
+\textbf{1 × Near (IV--V) Map tile}
 \begin{itemize}
   \item 1 × Inferno (N12)
 \end{itemize}
