--- a/campaigns/inferno_steadwicks_fall.tex
+++ b/campaigns/inferno_steadwicks_fall.tex
@@ -75,13 +75,13 @@ This scenario plays out over 16 rounds.
 
 Take the following Map tiles and set them up as shown in the scenario map layout:
 
-\textbf{2 × Starting Map tile (I)}
+\textbf{2 × Starting (I) Map tile}
 \begin{itemize}
   \item 1 × Inferno (S6)
   \item 1 × Castle (S3)
 \end{itemize}
 
-\textbf{3 × Far Map tile (II--III)}
+\textbf{3 × Far (II--III) Map tile}
 \begin{itemize}
   \item 1 × Castle (F3)
   \item 1 × Rampart (F10)
@@ -91,7 +91,7 @@ Take the following Map tiles and set them up as shown in the scenario map layout
   \item 1 × Necropolis (choose from: F4, \#F6, F7)
 \end{itemize}
 
-\textbf{2 × Near Map tile (IV--V)}
+\textbf{2 × Near (IV--V) Map tile}
 \begin{itemize}
   \item 2 × Castle (N3, choose from: \#N3, N6)
   \item 1 × Rampart (N8)
