Fix campaign template

--- a/templates/campaign.tex
+++ b/templates/campaign.tex
@@ -56,14 +56,14 @@ This scenario plays out over ... rounds.
 
 Take the following Map tiles and arrange them as shown in the scenario map layout:
 
-\textbf{X × Starting Map tile (I)}
+\textbf{X × Starting (I) Map tile}
 \begin{itemize}
     \item ... additional constraints ...
 \end{itemize}
 
-\textbf{Y × Far Map tile (II--III)}
+\textbf{Y × Far (II--III) Map tile}
 
-\textbf{Z × Near Map tile (IV--V)}
+\textbf{Z × Near (IV--V) Map tile}
 
 \subsection*{\MakeUppercase{Heroes placement}}
 
