[PL] inferno devilish plan + campaign translation setup (#51)

--- a/campaigns/inferno_devilish_plan.tex
+++ b/campaigns/inferno_devilish_plan.tex
@@ -69,26 +69,27 @@ This scenario plays out over 13 rounds.
 
 Take the following Map tiles and arrange them as shown in the scenario map layout:
 
-\textbf{2 × Starting Map tile (I)}
+\textbf{2 × Starting (I) Map tile}
 \begin{itemize}
   \item 1 × Inferno (S6)
   \item 1 × Rampart (S4)
 \end{itemize}
 
-\vspace*{\fill}\columnbreak
+\vspace*{\fill}
+\columnbreak
 
-\textbf{3 × Far Map tile (II--III)}
+\textbf{3 × Far (II--III) Map tile}
 \begin{itemize}
   \item \mbox{2 × Inferno (choose from: F16--F18, \#F10)}
   \item 1 × Rampart (choose from: F10--F12)
 \end{itemize}
 
-\textbf{2 × Near Map tile (IV--V)}
+\textbf{2 × Near (IV--V) Map tile}
 \begin{itemize}
   \item 2 × Rampart (N7, N8)
 \end{itemize}
 
-\textbf{1 × Center Map tile (VI--VII)}
+\textbf{1 × Center (VI--VII) Map tile}
 \begin{itemize}
   \item 1 × Dragon Utopia Center Map tile (C1)
 \end{itemize}
