--- a/translations/the_hunt.tex/pl.po
+++ b/translations/the_hunt.tex/pl.po
@@ -107,7 +107,7 @@ msgstr ""
 #. type: Plain text
 #: clash/the_hunt.tex:3
 msgid "\\addscenariosection{1}{Clash Scenario}{The Hunt}{\\images/slayer.png}"
-msgstr ""
+msgstr "\\addscenariosection{1}{Tryb Starcia}{Polowanie}{\\images/slayer.png}"
 
 #. type: multicols*
 #: clash/the_hunt.tex:7
@@ -116,6 +116,8 @@ msgid ""
 "\\textbf{Author:} Mateusz ``MATMOT'' Motyka\n"
 "\n"
 msgstr ""
+"\\textbf{Autor:} Mateusz ``MATMOT'' Motyka\n"
+"\n"
 
 #. type: multicols*
 #: clash/the_hunt.tex:9
@@ -124,6 +126,8 @@ msgid ""
 "\\textbf{Source:} \\href{https://discord.com/channels/740870068178649108/1229888426975821926}{Archon Studios Discord}\n"
 "\n"
 msgstr ""
+"\\textbf{Źródło:} \\href{https://discord.com/channels/740870068178649108/1229888426975821926}{Discord Archon Studio}\n"
+"\n"
 
 #. type: multicols*
 #: clash/the_hunt.tex:13
@@ -189,12 +193,12 @@ msgstr ""
 
 #. type: multicols*
 #: clash/the_hunt.tex:33 campaigns/inferno_devilish_plan.tex:41
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "\\textbf{Town Buildings:} \\svgunit{bronze} Dwelling, City Hall\n"
 "\n"
 msgstr ""
-"\\textbf{Budynki Początkowe:} Brak\n"
+"\\textbf{Budynki Początkowe:} \\svgunit{bronze} Siedlisko, Ratusz\n"
 "\n"
 
 #. type: multicols*
@@ -261,13 +265,7 @@ msgstr ""
 
 #. type: multicols*
 #: clash/the_hunt.tex:72
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{4$^{th}$, 8$^{th}$ and 12$^{th}$ Rounds:}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item Remove all Black cubes from every Windmill, Water Wheel, and Mystical Garden on the map.\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{\\nth{4}, \\nth{8} and \\nth{12} Rounds:}\n"
 "\\begin{itemize}\n"
@@ -277,7 +275,7 @@ msgid ""
 msgstr ""
 "\\textbf{Rundy 4., 8. i 12.:}\n"
 "\\begin{itemize}\n"
-"  \\item Usuń wszystkie Czarne Kostki z każdego Wiatraka, Młyna Wodnego i Mistycznego Ogródu na mapie.\n"
+"  \\item Usuń wszystkie Czarne Kostki z każdego Wiatraka, Młyna Wodnego i Jarmarku Czasu na mapie.\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -370,22 +368,6 @@ msgstr ""
 
 #. type: Plain text
 #: clash/the_hunt.tex:172
-#, fuzzy
-#| msgid ""
-#| "\\hommtable[]{9}{ \\centering \\medskip \\newcommand{\\bronze}[0]"
-#| "{\\svg[12]{bronze}} \\newcommand{\\silver}[0]{\\svg[12]{silver}} "
-#| "\\newcommand{\\golden}[0]{\\svg[12]{golden}} \\newcommand{\\azure}[0]"
-#| "{\\svg[12]{azure}} \\begin{tabularx}{\\linewidth}{XXXX} "
-#| "\\darkcell{\\raisebox{-.25\\height}{\\svg[20]{bronze}} \\textbf{Easy}} & "
-#| "\\darkcell{\\raisebox{-.25\\height}{\\svg[20]{silver}} \\textbf{Normal}} "
-#| "& \\darkcell{\\raisebox{-.25\\height}{\\svg[20]{golden}} \\textbf{Hard}} "
-#| "& \\darkcell{\\raisebox{-.25\\height}{\\svg[20]{azure}} "
-#| "\\textbf{Impossible}}\\\\ \\lightcell[2.5]{No additional\\\\changes} & "
-#| "\\lightcell[2.5]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]"
-#| "{\\images/hp.png}} 20} & \\lightcell[2.5]{\\raisebox{-.25\\height}"
-#| "{\\includegraphics[height=15px]{\\images/hp.png}} 32} & \\lightcell[2.5]"
-#| "{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp."
-#| "png}} 40 \\\\ +1 to corrosion armor decrease} \\\\ \\end{tabularx} }"
 msgid ""
 "\\hommtable[]{8}{ \\centering \\medskip \\newcommand{\\bronze}[0]"
 "{\\svgunit[12]{bronze}} \\newcommand{\\silver}[0]{\\svgunit[12]{silver}} "
@@ -403,21 +385,6 @@ msgid ""
 "40 \\\\ +2 \\svg{attack_yellow} \\\\ +2 \\svg{defense_yellow}} "
 "\\end{tabularx} }"
 msgstr ""
-"\\hommtable[]{9}{ \\centering \\medskip \\newcommand{\\bronze}[0]{\\svg[12]"
-"{bronze}} \\newcommand{\\silver}[0]{\\svg[12]{silver}} \\newcommand{\\golden}"
-"[0]{\\svg[12]{golden}} \\newcommand{\\azure}[0]{\\svg[12]{azure}} "
-"\\begin{tabularx}{\\linewidth}{XXXX} \\darkcell{\\raisebox{-.25\\height}"
-"{\\svg[20]{bronze}} \\textbf{Easy}} & \\darkcell{\\raisebox{-.25\\height}"
-"{\\svg[20]{silver}} \\textbf{Normal}} & \\darkcell{\\raisebox{-.25\\height}"
-"{\\svg[20]{golden}} \\textbf{Hard}} & \\darkcell{\\raisebox{-.25\\height}"
-"{\\svg[20]{azure}} \\textbf{Impossible}}\\\\ \\lightcell[2.5]{No additional\\"
-"\\changes} & \\lightcell[2.5]{\\raisebox{-.25\\height}"
-"{\\includegraphics[height=15px]{\\images/hp.png}} 20} & \\lightcell[2.5]"
-"{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} "
-"32} & \\lightcell[2.5]{\\raisebox{-.25\\height}"
-"{\\includegraphics[height=15px]{\\images/hp.png}} 40 \\\\ +1 to corrosion "
-"armor decrease} \\\\ \\end{tabularx} }\n"
-"\\clearpage"
 
 #. type: wrapfigure
 #: clash/the_hunt.tex:214
@@ -543,22 +510,6 @@ msgstr ""
 
 #. type: Plain text
 #: clash/the_hunt.tex:301
-#, fuzzy
-#| msgid ""
-#| "\\hommtable[]{9}{ \\centering \\medskip \\newcommand{\\bronze}[0]"
-#| "{\\svg[12]{bronze}} \\newcommand{\\silver}[0]{\\svg[12]{silver}} "
-#| "\\newcommand{\\golden}[0]{\\svg[12]{golden}} \\newcommand{\\azure}[0]"
-#| "{\\svg[12]{azure}} \\begin{tabularx}{\\linewidth}{XXXX} "
-#| "\\darkcell{\\raisebox{-.25\\height}{\\svg[20]{bronze}} \\textbf{Easy}} & "
-#| "\\darkcell{\\raisebox{-.25\\height}{\\svg[20]{silver}} \\textbf{Normal}} "
-#| "& \\darkcell{\\raisebox{-.25\\height}{\\svg[20]{golden}} \\textbf{Hard}} "
-#| "& \\darkcell{\\raisebox{-.25\\height}{\\svg[20]{azure}} "
-#| "\\textbf{Impossible}}\\\\ \\lightcell[2.5]{No additional\\\\changes} & "
-#| "\\lightcell[2.5]{\\raisebox{-.25\\height}{\\includegraphics[height=15px]"
-#| "{\\images/hp.png}} 20} & \\lightcell[2.5]{\\raisebox{-.25\\height}"
-#| "{\\includegraphics[height=15px]{\\images/hp.png}} 32} & \\lightcell[2.5]"
-#| "{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp."
-#| "png}} 40 \\\\ +1 to corrosion armor decrease} \\\\ \\end{tabularx} }"
 msgid ""
 "\\hommtable[]{9}{ \\centering \\medskip \\newcommand{\\bronze}[0]"
 "{\\svgunit[12]{bronze}} \\newcommand{\\silver}[0]{\\svgunit[12]{silver}} "
@@ -587,7 +538,7 @@ msgstr ""
 "{\\includegraphics[height=15px]{\\images/hp.png}} 20} & \\lightcell[2.5]"
 "{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} "
 "32} & \\lightcell[2.5]{\\raisebox{-.25\\height}"
-"{\\includegraphics[height=15px]{\\images/hp.png}} 40 \\\\ +1 to corrosion "
+"{\\includegraphics[height=15px]{\\images/hp.png}} 40 \\\\ +1 to Corrosion "
 "armor decrease} \\\\ \\end{tabularx} }\n"
 "\\clearpage"
 
