--- a/translations/inferno_devilish_plan.tex/pl.po
+++ b/translations/inferno_devilish_plan.tex/pl.po
@@ -666,7 +666,7 @@ msgstr ""
 "\\begin{itemize}\n"
 "    \\item Twój Bohater nie zdobywa doświadczenia powyżej poziomu 5.\n"
 "    \\item Wrogi Bohater nie porusza się i jedynie czeka w swoim Mieście. Zaczyna z Murami i Bramą.\n"
-"    \\item Na Kafelek N7 nie może być wejść, dopóki Ivor nie zostanie pokonany.\n"
+"    \\item Na Kafelek N7 nie można wejść, dopóki Ivor nie zostanie pokonany.\n"
 "    \\item W Smoczej Utopii twój bohater walczy z Armią Złotych Smoków.\n"
 "    \\item Nie możesz zbudować ,,Wrót Wymiarów''.\n"
 "    \\item Jeśli twój bohater odwiedzi Obelisk, możesz Przeszukać (2) talię Umiejętności, talię Artefaktów lub talię Zaklęć.\n"
