--- a/clash/the_hunt.tex
+++ b/clash/the_hunt.tex
@@ -5,7 +5,7 @@
 
 \textbf{Author:} Mateusz ``MATMOT'' Motyka
 
-\textbf{Source:} \href{https://discord.com/channels/740870068178649108/1229888426975821926}{Archon Studios Discord}
+\textbf{Source:} \href{https://boardgamegeek.com/filepage/277736/clash-scenario-the-hunt-v10}{BoardGameGeek}
 
 \textit{The land quivers under the reign of the fearsome Dragon.
   The one who dares to slay this monstrous beast shall ascend to the throne, crowned as the rightful ruler of the shattered kingdom.
@@ -136,8 +136,8 @@ During this scenario:
       If the artifact is:
       \begin{itemize}[leftmargin=15pt]
         \item A weapon: The Dragon gains one Breath attack that targets three creatures in a row.
-          The unit directly hit in the middle suffers full damage, while the units on both sides suffer 3 \svg{damage-red} less.
-        \item A piece of armor, shield, or clothing: The Dragon gains 3 temporary armor, represented with spare Faction cubes.
+          The unit directly hit in the middle suffers full damage, while the units on both sides suffer 3\,\svg{damage-red} less.
+        \item A piece of armor, shield, or clothing: The Dragon gains 3\,\svg{defense}, represented with spare Faction cubes.
           Remove them after they have absorbed damage.
         \item A trinket: The Azure Dragon roars and summons an ice storm, causing all creatures to freeze in fear.
           This results in every unit moving only 1 battle tile per round, while the Azure Dragon can fly to any tile on the combat board.
@@ -323,7 +323,7 @@ During this scenario:
   \begin{enumerate}
     \item Place 2 Faerie Dragon cards on the battlefield.
       Ignore their abilities.
-    \item Place 1 Dendroid card from the silver neutral units deck onto the battlefield, and place 3 additional cards face down to represent the other 3 Dendroids.
+    \item Place 1 Dendroid card from the \svg{silver} neutral units deck onto the battlefield, and place 3 additional cards face down to represent the other 3 Dendroids.
   \end{enumerate}
 
   \medskip
@@ -336,14 +336,14 @@ During this scenario:
       \begin{enumerate}[leftmargin=15pt]
         \item The first spell is \textit{Lightning}.
         \item The second spell is \textit{Cure}.
-        \item For the third spell, the Faerie Dragon randomly picks an expert spell from the Spell deck, excluding Map spells.
-          If a Map spell is picked, draw another spell.
+        \item For the third spell, the Faerie Dragon randomly picks an expert spell from the Spell deck, excluding Map \svg{map} spells.
+          If a Map \svg{map} spell is picked, draw another spell.
       \end{enumerate}
     \item \textit{Trickster:} In the first round of the battle, the first targeted Faerie Dragon is a mere mirage.
       It inflicts damage, but disappears from the battlefield when hit by an enemy.
     \item Dendroids' Ability: Each Dendroid holds a key to the Faerie Dragon's power.
       After the second Dendroid dies, start removing one spell from the Faerie Dragon's spellbook, beginning with the third spell.
-      Decrease the dragon's spell empowerment by one (starting from its maximum) upon vanquishing the 2nd, 3rd, and 4th Dendroids.
+      Decrease the dragon's spell empowerment \svg{empower} by one (starting from its maximum) upon vanquishing the 2nd, 3rd, and 4th Dendroids.
       When there are no Dendroids left, the dragon loses the ability to cast spells.
   \end{itemize}
 }
