--- a/translations/the_hunt.tex/cs.po
+++ b/translations/the_hunt.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-07-03 12:58+0200\n"
+"POT-Creation-Date: 2024-07-09 13:42+0200\n"
 "PO-Revision-Date: 2024-06-29 16:13+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -49,7 +49,7 @@ msgstr ""
 #. type: multicols*
 #: coops/sentinels.tex:69 coops/titans_stronghold.tex:70
 #: coops/emerald_island.tex:60 clash/bloody_grail.tex:66 clash/the_hunt.tex:67
-#: campaigns/inferno_devilish_plan.tex:114
+#: campaigns/inferno_devilish_plan.tex:115
 #: campaigns/inferno_steadwicks_fall.tex:134
 #: campaigns/inferno_deal_with_the_devil.tex:120
 #, no-wrap
@@ -111,7 +111,7 @@ msgstr ""
 #: clash/the_hunt.tex:9
 #, no-wrap
 msgid ""
-"\\textbf{Source:} \\href{https://discord.com/channels/740870068178649108/1229888426975821926}{Archon Studios Discord}\n"
+"\\textbf{Source:} \\href{https://boardgamegeek.com/filepage/277736/clash-scenario-the-hunt-v10}{BoardGameGeek}\n"
 "\n"
 msgstr ""
 
@@ -321,15 +321,15 @@ msgid ""
 "discarded artifacts.  If the artifact is: \\begin{itemize}[leftmargin=15pt] "
 "\\item A weapon: The Dragon gains one Breath attack that targets three "
 "creatures in a row.  The unit directly hit in the middle suffers full "
-"damage, while the units on both sides suffer 3 \\svg{damage-red} less.  "
-"\\item A piece of armor, shield, or clothing: The Dragon gains 3 temporary "
-"armor, represented with spare Faction cubes.  Remove them after they have "
-"absorbed damage.  \\item A trinket: The Azure Dragon roars and summons an "
-"ice storm, causing all creatures to freeze in fear.  This results in every "
-"unit moving only 1 battle tile per round, while the Azure Dragon can fly to "
-"any tile on the combat board.  \\end{itemize} \\item The Azure Dragon is "
-"immune to all spells cast against it.  \\item Buffs and enhancements cast on "
-"player's units remain effective.  \\end{itemize} }"
+"damage, while the units on both sides suffer 3\\,\\svg{damage-red} less.  "
+"\\item A piece of armor, shield, or clothing: The Dragon gains 3\\,"
+"\\svg{defense}, represented with spare Faction cubes.  Remove them after "
+"they have absorbed damage.  \\item A trinket: The Azure Dragon roars and "
+"summons an ice storm, causing all creatures to freeze in fear.  This results "
+"in every unit moving only 1 battle tile per round, while the Azure Dragon "
+"can fly to any tile on the combat board.  \\end{itemize} \\item The Azure "
+"Dragon is immune to all spells cast against it.  \\item Buffs and "
+"enhancements cast on player's units remain effective.  \\end{itemize} }"
 msgstr ""
 
 #. type: Plain text
@@ -481,25 +481,26 @@ msgid ""
 "spells.  Some say Magic Mirror is one of their natural defensive traits.  } "
 "\\medskip \\textbf{Fighting the Faerie Dragon:} \\begin{enumerate} \\item "
 "Place 2 Faerie Dragon cards on the battlefield.  Ignore their abilities.  "
-"\\item Place 1 Dendroid card from the silver neutral units deck onto the "
-"battlefield, and place 3 additional cards face down to represent the other 3 "
-"Dendroids.  \\end{enumerate} \\medskip \\textbf{Rules:} \\begin{itemize} "
-"\\item The Faerie Dragon is immune to basic spells.  \\item The Faerie "
-"Dragon can cast up to two different spells per battle round.  \\item All "
-"spells are displayed visibly next to the combat board: \\begin{enumerate}"
-"[leftmargin=15pt] \\item The first spell is \\textit{Lightning}.  \\item The "
-"second spell is \\textit{Cure}.  \\item For the third spell, the Faerie "
-"Dragon randomly picks an expert spell from the Spell deck, excluding Map "
-"spells.  If a Map spell is picked, draw another spell.  \\end{enumerate} "
-"\\item \\textit{Trickster:} In the first round of the battle, the first "
-"targeted Faerie Dragon is a mere mirage.  It inflicts damage, but disappears "
-"from the battlefield when hit by an enemy.  \\item Dendroids' Ability: Each "
-"Dendroid holds a key to the Faerie Dragon's power.  After the second "
-"Dendroid dies, start removing one spell from the Faerie Dragon's spellbook, "
-"beginning with the third spell.  Decrease the dragon's spell empowerment by "
-"one (starting from its maximum) upon vanquishing the 2nd, 3rd, and 4th "
-"Dendroids.  When there are no Dendroids left, the dragon loses the ability "
-"to cast spells.  \\end{itemize} }"
+"\\item Place 1 Dendroid card from the \\svg{silver} neutral units deck onto "
+"the battlefield, and place 3 additional cards face down to represent the "
+"other 3 Dendroids.  \\end{enumerate} \\medskip \\textbf{Rules:} "
+"\\begin{itemize} \\item The Faerie Dragon is immune to basic spells.  \\item "
+"The Faerie Dragon can cast up to two different spells per battle round.  "
+"\\item All spells are displayed visibly next to the combat board: "
+"\\begin{enumerate}[leftmargin=15pt] \\item The first spell is "
+"\\textit{Lightning}.  \\item The second spell is \\textit{Cure}.  \\item For "
+"the third spell, the Faerie Dragon randomly picks an expert spell from the "
+"Spell deck, excluding Map \\svg{map} spells.  If a Map \\svg{map} spell is "
+"picked, draw another spell.  \\end{enumerate} \\item \\textit{Trickster:} In "
+"the first round of the battle, the first targeted Faerie Dragon is a mere "
+"mirage.  It inflicts damage, but disappears from the battlefield when hit by "
+"an enemy.  \\item Dendroids' Ability: Each Dendroid holds a key to the "
+"Faerie Dragon's power.  After the second Dendroid dies, start removing one "
+"spell from the Faerie Dragon's spellbook, beginning with the third spell.  "
+"Decrease the dragon's spell empowerment \\svg{empower} by one (starting from "
+"its maximum) upon vanquishing the 2nd, 3rd, and 4th Dendroids.  When there "
+"are no Dendroids left, the dragon loses the ability to cast spells.  "
+"\\end{itemize} }"
 msgstr ""
 
 #. type: Plain text
