[PL] Translate sentinels + minor fixes

--- a/coops/emerald_island.tex
+++ b/coops/emerald_island.tex
@@ -26,8 +26,8 @@ This scenario is played over 8 rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item A Pack of \svgunit{bronze} units of your choice.
-  \item A Few \svgunit{bronze} units of your choice.
+  \item A Pack of \svgunit{bronze} units of your choice
+  \item A Few \svgunit{bronze} units of your choice
 \end{itemize}
 
 \textbf{Town Buildings:} \svgunit{bronze} Dwelling
