--- a/coops/titans_stronghold.tex
+++ b/coops/titans_stronghold.tex
@@ -29,8 +29,8 @@ This scenario is played over 16 rounds (15 on Impossible difficulty).
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item A Pack of \svgunit{bronze} units of your choice.
-  \item A Few \svgunit{bronze} units of your choice.
+  \item A Pack of \svgunit{bronze} units of your choice
+  \item A Few \svgunit{bronze} units of your choice
 \end{itemize}
 
 \textbf{Town Buildings:} None
