--- a/coops/sentinels.tex
+++ b/coops/sentinels.tex
@@ -28,8 +28,8 @@ This scenario is played over 12 rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item A Pack of \svgunit{bronze} units with the \textit{lowest} recruitment cost.
-  \item A Few \svgunit{bronze} units with the \textit{highest} recruitment cost.
+  \item A Pack of \svgunit{bronze} units with the \textit{lowest} recruitment cost
+  \item A Few \svgunit{bronze} units with the \textit{highest} recruitment cost
 \end{itemize}
 
 \textbf{Town Buildings:} \svgunit{bronze} Dwelling, Citadel
@@ -44,15 +44,15 @@ Take the following Map tiles and arrange them as shown in the scenario map layou
 
 \textbf{2 × Starting (I) Map tile}
 \begin{itemize}
-  \item Starting Tiles of your chosen factions.
-  \item Ignore their yellow borders.
+  \item Starting Tiles of your chosen factions
+  \item Ignore their yellow borders
 \end{itemize}
 
 \textbf{4 × Far (II--III) Map tile}
 
 \textbf{4 × Near (IV--V) Map tile}
 \begin{itemize}
-  \item All Near Map tiles must have Obelisks.
+  \item All Near Map tiles must have Obelisks
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Conditions}}
@@ -108,8 +108,8 @@ One of your towns is captured, or a main hero is defeated in a battle (retreat d
   \item Enemy armies spawn on a random Obelisk field (use hero miniatures from factions not in play).
   \item Determine which Obelisk field by rolling 2 Attack Dice. Apply the results as follows (D1/D2), reroll any 0:
   \begin{itemize}[leftmargin=15pt]
-    \item $+1$/$+1$ = North, $+1$/$-1$ = East
-    \item $-1$/$+1$ = West, $-1$/$-1$ = South
+    \item[] $+1$/$+1$ = North, $+1$/$-1$ = East
+    \item[] $-1$/$+1$ = West, $-1$/$-1$ = South
   \end{itemize}
   \item For a more balanced distribution, in Rounds 7 and 9, only roll the second Attack Die (D2). For D1, take the opposite result from what was rolled in the previous Round.
   Rounds 8 and 10 are entirely random.
