--- a/translations/sentinels.tex/sentinels.tex.pot
+++ b/translations/sentinels.tex/sentinels.tex.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2024-07-02 20:16+0100\n"
+"POT-Creation-Date: 2024-07-10 11:52+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -119,8 +119,8 @@ msgstr ""
 msgid ""
 "\\textbf{Starting Units:}\n"
 "\\begin{itemize}\n"
-"  \\item A Pack of \\svgunit{bronze} units with the \\textit{lowest} recruitment cost.\n"
-"  \\item A Few \\svgunit{bronze} units with the \\textit{highest} recruitment cost.\n"
+"  \\item A Pack of \\svgunit{bronze} units with the \\textit{lowest} recruitment cost\n"
+"  \\item A Few \\svgunit{bronze} units with the \\textit{highest} recruitment cost\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -172,8 +172,8 @@ msgstr ""
 msgid ""
 "\\textbf{2 × Starting (I) Map tile}\n"
 "\\begin{itemize}\n"
-"  \\item Starting Tiles of your chosen factions.\n"
-"  \\item Ignore their yellow borders.\n"
+"  \\item Starting Tiles of your chosen factions\n"
+"  \\item Ignore their yellow borders\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -192,14 +192,14 @@ msgstr ""
 msgid ""
 "\\textbf{4 × Near (IV--V) Map tile}\n"
 "\\begin{itemize}\n"
-"  \\item All Near Map tiles must have Obelisks.\n"
+"  \\item All Near Map tiles must have Obelisks\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
 
 #. type: multicols*
 #: coops/sentinels.tex:59 coops/titans_stronghold.tex:62
-#: coops/emerald_island.tex:52 campaigns/inferno_devilish_plan.tex:104
+#: coops/emerald_island.tex:52 campaigns/inferno_devilish_plan.tex:105
 #: campaigns/inferno_steadwicks_fall.tex:121
 #: campaigns/inferno_deal_with_the_devil.tex:110
 #, no-wrap
@@ -218,7 +218,7 @@ msgstr ""
 
 #. type: multicols*
 #: coops/sentinels.tex:63 coops/titans_stronghold.tex:66
-#: coops/emerald_island.tex:56 campaigns/inferno_devilish_plan.tex:108
+#: coops/emerald_island.tex:56 campaigns/inferno_devilish_plan.tex:109
 #: campaigns/inferno_steadwicks_fall.tex:126
 #: campaigns/inferno_deal_with_the_devil.tex:114
 #, no-wrap
@@ -246,7 +246,7 @@ msgstr ""
 #. type: multicols*
 #: coops/sentinels.tex:69 coops/titans_stronghold.tex:70
 #: coops/emerald_island.tex:60 clash/bloody_grail.tex:66 clash/the_hunt.tex:67
-#: campaigns/inferno_devilish_plan.tex:114
+#: campaigns/inferno_devilish_plan.tex:115
 #: campaigns/inferno_steadwicks_fall.tex:134
 #: campaigns/inferno_deal_with_the_devil.tex:120
 #, no-wrap
@@ -342,8 +342,8 @@ msgid ""
 "  \\item Enemy armies spawn on a random Obelisk field (use hero miniatures from factions not in play).\n"
 "  \\item Determine which Obelisk field by rolling 2 Attack Dice. Apply the results as follows (D1/D2), reroll any 0:\n"
 "  \\begin{itemize}[leftmargin=15pt]\n"
-"    \\item $+1$/$+1$ = North, $+1$/$-1$ = East\n"
-"    \\item $-1$/$+1$ = West, $-1$/$-1$ = South\n"
+"    \\item[] $+1$/$+1$ = North, $+1$/$-1$ = East\n"
+"    \\item[] $-1$/$+1$ = West, $-1$/$-1$ = South\n"
 "  \\end{itemize}\n"
 "  \\item For a more balanced distribution, in Rounds 7 and 9, only roll the second Attack Die (D2). For D1, take the opposite result from what was rolled in the previous Round.\n"
 "  Rounds 8 and 10 are entirely random.\n"
