--- a/translations/sentinels.tex/pl.po
+++ b/translations/sentinels.tex/pl.po
@@ -564,6 +564,9 @@ msgid ""
 "  \\centering\n"
 "  \\node at (14, 1.5) {\\includegraphics[width=0.4\\paperwidth]{\\_assets/maps/sentinels.png}};"
 msgstr ""
+"[overlay]\n"
+"  \\centering\n"
+"  \\node at (14, 4) {\\includegraphics[width=0.4\\paperwidth]{\\_assets/maps/sentinels.png}};"
 
 #. type: Plain text
 #: coops/sentinels.tex:192
