--- a/translations/sentinels.tex/pl.po
+++ b/translations/sentinels.tex/pl.po
@@ -594,8 +594,8 @@ msgid ""
 "\\lightcell[1.4]{\\golden \\azure \\azure \\azure \\footref{azure} "
 "\\linebreak (7\\golden, 3\\azure)}\\\\ \\end{tabularx} }"
 msgstr ""
-"\\hommtable[]{20}{ \\centering \\medskip \\textbf{Siła Wrogich Armii}\\"
-"\\ \\bigskip \\newcommand{\\bronze}[0]{\\svgunit[12]{bronze}} "
+"\\hommtable[]{20}{ \\centering \\medskip \\textbf{Siła Wrogich Armii}\\\\ "
+"\\bigskip \\newcommand{\\bronze}[0]{\\svgunit[12]{bronze}} "
 "\\newcommand{\\silver}[0]{\\svgunit[12]{silver}} \\newcommand{\\golden}[0]"
 "{\\svgunit[12]{golden}} \\newcommand{\\azure}[0]{\\svgunit[12]{azure}} "
 "\\begin{tabularx}{\\linewidth}{p{0.15\\linewidth}XXXX} & \\darkcell{Rundy 6 "
@@ -604,8 +604,8 @@ msgstr ""
 "\\lightcell[1.4]{\\silver \\silver \\silver \\golden \\golden} & "
 "\\lightcell[1.4]{\\silver \\silver \\golden \\azure \\footref{azure} "
 "\\linebreak (2\\bronze, 4\\silver, 3\\golden, 1\\azure)}\\\\ \\darkcell[1.4]"
-"{Normalny} & \\lightcell[1.4]{\\silver \\silver \\silver \\golden \\golden} & "
-"\\lightcell[1.4]{\\silver \\silver \\silver \\golden \\azure} & "
+"{Normalny} & \\lightcell[1.4]{\\silver \\silver \\silver \\golden \\golden} "
+"& \\lightcell[1.4]{\\silver \\silver \\silver \\golden \\azure} & "
 "\\lightcell[1.4]{\\golden \\golden \\golden \\azure \\footref{azure} "
 "\\linebreak (2\\silver, 7\\golden, 1\\azure)}\\\\ \\darkcell[1.4]{Trudny} & "
 "\\lightcell[1.4]{\\silver \\silver \\golden \\golden \\golden} & "
@@ -623,4 +623,5 @@ msgid ""
 "Always 1 unit of Azure Dragons (starting units of Boss Army). The rest is "
 "random\\label{azure}."
 msgstr ""
-"Zawsze 1 jednostka Błękitnych Smoków (początkowe jednostki Finałowej Armii). Reszta jest losowa\\label{azure}."
+"Zawsze 1 jednostka Błękitnych Smoków (początkowe jednostki Finałowej Armii). "
+"Reszta jest losowa\\label{azure}."
