Fix table font, remove unnecessary abstraction

--- a/main_en.tex
+++ b/main_en.tex
@@ -2,9 +2,7 @@
 \documentclass[12pt]{article}
 
 % Language setting
-\usepackage[T1]{fontenc}
 \usepackage[english]{babel}
-\usepackage{fontspec}
 
 \def\sections{sections}
 \def\coopspath{coops}
@@ -15,6 +13,7 @@
 \def\campaignstitle{Campaigns}
 \def\lang_header_adjustment{0px}
 
+\newcommand{\authortext}{By The Community}
 \newcommand{\versionlabel}{Version}
 \newcommand{\versionwarning}{This is an unreleased version built on GitHub from commit}
 
